<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Application name-->
    <string name="app_name">BloQuery</string>

    <!-- App Id & Client Key-->
    <string name="parse_app_id">KbF3oiduq4h9bsIBfycOW5pS5pXWfFyJvdOaTx71</string>
    <string name="parse_client_key">VEWWrRR4pk35VY1eXFYr0WPuky4kQ8RziMIlI8QS</string>

    <string name="text_signup">Create Account</string>
    <string name="text_login_failed">Username or Password incorrect</string>

    <!-- Text hints -->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_question">Type your question</string>
    <string name="hint_answer">Type your answer</string>
    <string name="hint_description">Tell us about you</string>

    <!-- Button text -->
    <string name="button_login">Login</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_submit">Submit</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>

    <!-- Menu Actions -->
    <string name="action_logout">Log Out</string>
    <string name="action_new_question">New Question</string>
    <string name="action_new_answer">New Answer</string>
    <string name="ask_new_question">Ask New Question</string>
    <string name="submit_an_answer">Submit An Answer</string>
    <string name="update_profile_pic">Update Profile Picture</string>
    <string name="edit_description">Edit Profile Description</string>

</resources>
