<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:background="@color/primary"
    android:padding="@dimen/activity_padding">

    <LinearLayout
        android:id="@+id/ll_one"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".75"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_signup"
            android:textSize="30sp"
            android:typeface="monospace"
            android:textColor="@color/text_icons"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_two"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/hint_username"
            android:inputType="text"
            android:layout_marginBottom="10dp"
            android:typeface="monospace"
            android:textColor="@color/text_icons"
            android:textColorHint="@color/text_icons"/>

        <EditText
            android:id="@+id/et_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/hint_firstname"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"
            android:typeface="monospace"
            android:textColor="@color/text_icons"
            android:textColorHint="@color/text_icons"/>

        <EditText
            android:id="@+id/et_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/hint_lastname"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"
            android:typeface="monospace"
            android:textColor="@color/text_icons"
            android:textColorHint="@color/text_icons"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/hint_password"
            android:typeface="monospace"
            android:inputType="textPassword"
            android:layout_marginBottom="10dp"
            android:textColor="@color/text_icons"
            android:textColorHint="@color/text_icons"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_three"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".75"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal">

        <Button
            android:id="@+id/bt_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_signup"
            android:typeface="monospace"
            android:background="@color/accent"
            android:textColor="@color/text_icons"/>

    </LinearLayout>
</LinearLayout>